# Tests

./: .gitignore  README.md
C/: CMakeLists.txt
C++/: count_nv_avg.cpp
C++/C++_learn/: CMakeLists.txt
C++/book_exercise/: CMakeLists.txt
C++/book_exercise/algorithum/chapter1/: CMakeLists.txt  exercise1-1-1.cpp  exercise1-1-3.cpp
C++/cpp_practice/: readme.md
C++/hellocpp/: .gitignore  CMakeLists.txt  main.cpp
C++/hellocpp/OperatorOverload/: CMakeLists.txt  Person.cpp  Person.h
C++/hellocpp/constructor/: CMakeLists.txt  Person.cpp  Phone.cpp
C++/hellocpp/extend/: Animal.cpp
C++/hellocpp/friend/: CMakeLists.txt  GoodGay.cpp  GoodGay.h
C++/hellocpp/functor/: CMakeLists.txt  functor.cpp
C++/hellocpp/leetcode/: CMakeLists.txt  ListNode.h  main.cpp
C++/hellocpp/leetcode/1290/: leetcode1290.cpp  leetcode1290.h
C++/hellocpp/leetcode/2/: CMakeLists.txt  leetcode2.cpp
C++/hellocpp/leetcode/isPalindrome/: CMakeLists.txt  IsPalindrome.cpp
C++/hellocpp/leetcode/offer18/: CMakeLists.txt  offer18.cpp
C++/hellocpp/leetcode/offer22/: offer22.cpp  offer22.h
C++/hellocpp/predicate/: CMakeLists.txt  predicate.cpp
C++/hellocpp/smart_pointer/: CMakeLists.txt  smart_pointer.cpp
C++/hellocpp/task/: CMakeLists.txt
C++/hellocpp/task/task1/: WorkManager.cpp  WorkManager.h
C++/hellocpp/task/task2/: MyArray.hpp  Person.hpp  main.cpp  reademe.md
C++/hellocpp/task1/: main.cpp  readme.md
C++/hellocpp/template/: class_func_template.h  class_template.h  template_test.cpp
C++/leetcode/: CMakeLists.txt  ListNode.h  readme.md
C++/longest_repeat_str/: Makefile  longest_repeat_str.cpp  net.cpp
C/IPC/: CMakeLists.txt  my_tell_wait.h
C/array/: CMakeLists.txt
C/array/const_cahr_array/: const_string_contain  const_string_contain.c
C/array/const_char_array/: CMakeLists.txt  const_string_contain.c  readme
C/array/dynamic_array/: CMakeLists.txt  dynamic_array.c  readme.md
C/array/out_of_array_index/: CMakeLists.txt  out_of_index.c
C/array/pointer_array/: CMakeLists.txt  pointer_array.c
C/ascii/: ascii  ascii.cpp
C/bool/: booltest  booltest.c
C/break/: break  break.c
C/buf/: buf  buf.c
C/cFiles/: return
C/chart2int/: char2int  char2int.c  readme.md
C/check_password/: check_password  check_password.c
C/compilation/: add_num.c  add_num.s  readme.md
C/dir_or_file/: dir-or-file  dir-or-file.c  readme.md
C/ffmpeg/: readme.md  record  record.c
C/fork/: CMakeLists.txt  fork_test.c
C/get_port/: get_port.sh  temp1
C/global_func_arg/: global_func_arg.c  readme.md
C/hongDingYi/: define.c  test
C/ifFIleExiste/: readme.md
C/io/: CMakeLists.txt
C/klib/: Makefile  mem_leak  my_khash.c  my_klib
C/linkedlist/: filename_list.c  filename_list.h  readme.md
C/longdouble/: readme.md  sizeof
C/main_test/: main_test.c
C/mem_leak/: CMakeLists.txt  mem_leak  mem_leak.c
C/objdump/: readme.md
C/perftool/: malloc.c  内存泄漏检测.md
C/pointParaInFunc/: pointParaInFunc.c
C/point_exchange/: point  point.c
C/point_malloc/: point_malloc  point_malloc.c
C/point_mem/: point_mem  point_mem.c  readme.md
C/pointargs/: pointargs.c
Scala/: scala2-1.scala
blog/: Pthread 多线程编程.md
cFiles/: readme.md  return.c
endian/: readme.md
global_func_arg/: global_func_arg
go/: helloword.go
hongDingYi/: readme.md
ifFIleExiste/: ifFileExiste  ifFileExiste.c
java/: hanzi.java
journals/: Test.md
longdouble/: longdouble  longdouble.c  sizeof.c  structsize  structsize.cpp
out_of_array_index/: readme.md
pointParaInFunc/: pointParaInFunc
python/: print.py
realpath/: realpath
removeChar/: log.data  readme.md  removeChar.c
struct/: readme.md
tail/: readme.md
var_wide/: var_wide.py
vim/: .vimrc  windows-terminal  windows-terminal.json
winsows/: ip_int.ps1
(+164 files in other folders)
