cmake_minimum_required(VERSION 3.10)
project(book_exercise)

set(CMAKE_CXX_STANDARD 11)
# windows下乱码问题
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")

add_executable(exercise1-1-1 exercise1-1-1.cpp)
add_executable(exercise1-1-2 exercise1-1-2.cpp)
add_executable(exercise1-1-3 exercise1-1-3.cpp)
add_executable(exercise1-1-6 exercise1-1-6.cpp)
add_executable(exercise1-1-7 exercise1-1-7.cpp)
add_executable(exercise1-1-8 exercise1-1-8.cpp)
